# libospl

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  IDEAS.md  NORM.md  README.md  codecov.yml  database.sql
.circleci/: config.yml
src/: album.rs  collection.rs  database.rs  directory.rs  element.rs  filesystem.rs  lib.rs  library.rs  ospl.rs  photo.rs  thumbnails.rs  utility.rs
src/api/: album.rs  collection.rs  import.rs  library.rs  mod.rs  photo.rs
src/element/: album.rs  collection.rs  mod.rs  photo.rs  traits.rs
tests/: album_tests.rs  basic_tests.rs  collection_tests.rs  database_tests.rs  import_tests.rs  library_tests.rs  listing_tests.rs  test_tools.rs
tests/files/: not_an_image.odt
