[package]
name = "libospl"
version = "0.1.0"
edition = "2021"

[lib]
name = "ospl"
path = "src/ospl.rs"


[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
rand = "0.8.5"
infer = "0.11.0"
chrono = "0.4.23"

[dependencies.xxhash-rust]
version = "0.8.6"
features = ["xxh3"]
