[package]
name = "libospl"
version = "0.2.0"
edition = "2021"

[lib]
name = "ospl"
path = "src/ospl.rs"


[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
rand = "0.8.5"
infer = "0.13.0"
chrono = "0.4.23"
image = "0.24.5"
log = "0.4.17"

[dependencies.xxhash-rust]
version = "0.8.6"
features = ["xxh3"]
